--- a/templates/sidebar.yaml
+++ b/templates/sidebar.yaml
@@ -27,9 +27,9 @@
           </b></font>
 
         weather: |
-          {%- set temperature = states('sensor.dark_sky_temperature') | default | float %}
-          {%- set apparent = states('sensor.dark_sky_apparent_temperature') | default | round(1) %}
-          {%- set precip = states('sensor.dark_sky_precip_probability') | default | round(1) %}
+          {%- set temperature = states('sensor.dark_sky_temperature') (default=0.0) %}
+          {%- set apparent = states('sensor.dark_sky_apparent_temperature') | float(default=0.0) | round(1) %}
+          {%- set precip = states('sensor.dark_sky_precip_probability') | float(default=0.0) | round(1) %}
           {% if not is_state('sensor.dark_sky_temperature', 'unknown') %}
             {%- if temperature <= 32.0 -%}
               Feels like {{ apparent }}° with {{ precip }}% risk of snow {{'\u2744\uFE0F'}}
