--- a/include/logger.yaml
+++ b/include/logger.yaml
@@ -20,6 +20,7 @@ logger:
     alexapy.alexaapi: info
 
     homeassistant.components.samsungtv: info
+    custom_components.androidtv: debug
 
     homeassistant.components.homekit_controller: info
     samsungtvws: debug
