--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__
 www/Plex_Recently_Added/*
 www/fonts
 scripts/*
+www/weather-icons/*
 
 #-------------------------------------------
 # Ignore Files Starting with '.'
